# agentwarden

./: LICENSE  README.md  pyproject.toml  requirements.txt
agentwarden/: __init__.py  injection_detector.py  monitor.py  policy.py  semantic_diff.py
demo/: README.md  collusion_demo.py
experiments/: collusion_benchmark.py
experiments/results/: collusion_benchmark.json
integrations/: __init__.py  autogen.py  langchain.py
tests/: test_injection_detector.py  test_monitor.py  test_semantic_diff.py
